# Rust-web-scraper

./: Cargo.toml
src/: main.rs  service.rs
static/css/: style.css
templates/: index.html.tera
