[package]
name = "web_scraping_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
scraper = "0.14.0"
reqwest = "0.9.22"
select = "0.6.0"
serde_json = "1.0.91"
"serde" = "1.0.114"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars", "tera"]